--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -14,7 +14,11 @@ ol[class] {
 html {
   font-size: 10px;
   height: auto;
-  min-height: 100vh;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body,
@@ -35,7 +39,6 @@ dd {
 }
 
 body {
-  max-height: 100vh;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
